--- a/client/styles/votelist.css
+++ b/client/styles/votelist.css
@@ -3,6 +3,21 @@
 	background: white url("../img/background.png") no-repeat 50%;
 }
 
+.fa-refresh-animate {
+    -animation: spin .7s infinite linear;
+    -webkit-animation: spin2 .7s infinite linear;
+}
+
+@-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg);}
+    to { -webkit-transform: rotate(360deg);}
+}
+
+@keyframes spin {
+    from { transform: scale(1) rotate(0deg);}
+    to { transform: scale(1) rotate(360deg);}
+}
+
 .vl-search-bar {
 	padding: 10px;
 	background-color: #092b65;
