--- a/client/styles/votelist.css
+++ b/client/styles/votelist.css
@@ -18,15 +18,21 @@
     to { transform: scale(1) rotate(360deg);}
 }
 
+.navbar-app .btn, .navbar-app .btn:hover {
+	color: white;
+}
+
 .vl-search-bar {
-	padding: 10px;
 	background-color: #092b65;
-	
+	box-shadow: 0 1px 4px #888888;
+	border: 0;
 }
 
 .vl-add-bar {
-	padding: 10px;
+	padding: 8px;
 	background-color: #33968d;
+	box-shadow: 0 -1px 4px #888888;
+	border: 0;
 }
 
 .votelist {
